--- a/src/Components/DetailsProduct/DetailsProduct.css
+++ b/src/Components/DetailsProduct/DetailsProduct.css
@@ -7,7 +7,7 @@
 }
 
 
-.small-imgs {
+.small-img {
     width: 100%;
     display: flex;
     gap: 1.2rem;
@@ -15,7 +15,7 @@
     align-items: center;
 }
 
-.small-imgs img {
+.small-img img {
     border-radius: 5px;
     width: 22%;
     height: 20%;
@@ -23,7 +23,7 @@
     cursor: pointer;
 }
 
-.small-imgs img:hover {
+.small-img img:hover {
     outline: 1px solid rgba(0, 0, 0, 0.3);
 
     -webkit-box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.18);
