--- a/src/Components/DetailsProduct/DetailsProduct.css
+++ b/src/Components/DetailsProduct/DetailsProduct.css
@@ -30,3 +30,8 @@
     -moz-box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.18);
     box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.18);
 }
+@media screen and (max-width: 820px) {
+.reviewCard{
+    margin: 20px 20px;
+}
+}
