update all image

--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,5 +1,5 @@
 .login{
-    background-image: url(./1.jpg);
+    background-image: url(https://i.ibb.co/3F8Hr6g/1.jpg);
 }
 .form1{
     padding-top: 20px;
