--- a/src/Components/Register/Register.css
+++ b/src/Components/Register/Register.css
@@ -1,5 +1,5 @@
 .register{
-    background-image: url(./1.jpg);
+    background-image: url('https://i.ibb.co/0Y6X7rX/1.jpg');
 }
 .form{
     padding-top: 0px;
