--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,5 +1,5 @@
 .contact{
-    background-image: url(./2.jpeg);
+    background-image: url(https://i.ibb.co/g6bZ5FT/2.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     position: relative;
