--- a/src/Components/Home/MainSection/MainSection.css
+++ b/src/Components/Home/MainSection/MainSection.css
@@ -1,7 +1,7 @@
 .carousel {
     position: relative;
     width: 100%;
-    height: 500px; /* Adjust the height as needed */
+    height: 500px;
     overflow: hidden;
   }
   
